added punctuation to address

--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             <img src="./saas-project-assets/logo_icons/logoipsum-330.svg" alt="footer-logo">
             <div class="locations">
                 <i class="fa-solid fa-location-arrow" style="color: #939898;"></i>
-                <p>153 Williamson Plaza, Maggieburg</p>
+                <p>153 Williamson Plaza, Maggieburg.</p>
             </div>
             <div class="locations">
                 <i class="fa-solid fa-phone" style="color: #939898;"></i>
